--- a/TiempoBusFirefoxOS/www/blocks/style_unstable/value_selector/index.html
+++ b/TiempoBusFirefoxOS/www/blocks/style_unstable/value_selector/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8" http-equiv="Content-Type">
+    <meta charset="utf-8">
 
     <title>Value selector</title>
     <link rel="stylesheet" href="../value_selector.css">
 
+    <!--
+      This <style> and <link> is only used for the example code, is no needed for the real case use
+    -->
     <style type="text/css">
       html, body { font-size: 10px; margin: 0; padding: 0; }
     </style>
@@ -18,14 +21,14 @@
     <section class="scrollable">
       <h1>Select</h1>
       <ol role="listbox">
-        <li><label> <span>None</span></label></li>
-        <li><label> <span>At time of event</span></label></li>
-        <li><label> <span>5 minutes before</span></label></li>
-        <li><label> <span>15 minutes before</span></label></li>
-        <li aria-checked="true"><label> <span>30 minutes before</span></label></li>
-        <li><label> <span>1 hour before</span></label></li>
-        <li><label> <span>2 hours before</span></label></li>
-        <li><label> <span>1 day before</span></label></li>
+        <li role="option"><label role="presentation"> <span>None</span></label></li>
+        <li role="option"><label role="presentation"> <span>At time of event</span></label></li>
+        <li role="option"><label role="presentation"> <span>5 minutes before</span></label></li>
+        <li role="option"><label role="presentation"> <span>15 minutes before</span></label></li>
+        <li role="option" aria-selected="true"><label role="presentation"> <span>30 minutes before</span></label></li>
+        <li role="option"><label role="presentation"> <span>1 hour before</span></label></li>
+        <li role="option"><label role="presentation"> <span>2 hours before</span></label></li>
+        <li role="option"><label role="presentation"> <span>1 day before</span></label></li>
       </ol>
     </section>
     <menu>
